analogue Change Log

Version 0.6-11

	* tran: now converts input data to matrix using 'data.matrix' which
	deals with factor variables appropriately.
	
Version 0.6-10

	* predict.wa: Predictions with tolerance DW now works for CV = "LOO"

	* wa.formula: Argument list updated to match wa.default.

	* fixUpTol: New internal utility function the encapsulates code to
	modify working tolerances within WA model fitting.

	* w.tol: Internal function w.tol now uses a faster C version of the
	code.
	
Version 0.6-9 (Closed Sun 7 June 2009)

	* predict.wa: Predictions without CV can now be made for WA models
	fitted using tolerance DW.

	* wa: Now returns the options for tweaking tolerances as part of
	model object in component 'options.tol', which is a names list.

	* Utility functions: WApred() and WATpred() internal functions for
	predictions using WA or WA with tolerance DW.

Version 0.6-8 (Closed Mon 5 May 2009)

	* residLen: new function to compute squared residual length 
	diagnostic for passive samples in a constrained ordination. Used as
	a test of whether core samples are well fitted in a transfer function
	model.

	Several utility functions to compute fitted values from an ordination
	and corresponding residual lengths are provided, which me be useful
	for authors of other functions.

	'plot' and 'hist' methods produce density plots and histograms for
	'residLen' objects using base graphics.

	'densityplot' and 'histogram' methods for 'residLen' objects using
	Lattice graphics.

	* stdError: new function to compute the weighted standard deviation
	of the environment values for the k closest analogues in MAT models.
	This can be used as an uncertainty measure for MAT fitted values or
	transfer function predictions.

	Methods are available for 'mat' and 'predict.mat'.

	* predict.mat: now returns the dissimilarity matrix between the 
	training set samples and samples in 'newdata'.

	* getK: new method for 'predict.mat'.
